[package]
name = "uptime"
version = "1.0.2"
authors = ["Ian Spence <ian@ecn.io>"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
chrono = "0.4"
hostname = "0.3.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }